@@ -1,9 +1,0 @@
-#pragma once
-
-#include "ofMatrix3x3.h"
-
-#warning ofxMatrix3x3 has been deprecated. 
-#warning Remove all references to ofxMatrix3x3.h and use ofMatrix3x3 instead.
-
-typedef ofMatrix3x3 ofxMatrix3x3;
-
