@@ -1,8 +1,0 @@
-#pragma once
-
-#include "ofVec4f.h"
-
-#warning ofxPoint4f has been deprecated. 
-#warning Remove all references to ofxPoint4f.h and use ofVec4f instead.
-
-typedef ofVec4f ofxPoint4f;
